...

  Scaffold(
      topBar = {
        TitleAppBar(
            navigationActions,
            "Leaderboard",
            "leaderboardTitle",
            "leaderboardBackButton",
            "leaderboardBackIcon")
      },
      bottomBar = {
        BottomNavigationMenu(
            onTabSelect = { route -> navigationActions.navigateTo(route) },
...
            modifier =
                Modifier.fillMaxSize()
                    .padding(innerPadding)
                    .padding(
                        horizontal = AppDimensions.paddingMedium,
                        vertical = AppDimensions.paddingSmall)
                    .testTag("leaderboardList"),
            horizontalAlignment = Alignment.CenterHorizontally) {
              // Dropdown selector for choosing practice mode
              ButtonRow()

              Spacer(modifier = Modifier.height(AppDimensions.paddingMedium))

...
  Box(
      modifier =
          Modifier.clip(RoundedCornerShape(AppDimensions.roundedCornerRadius))
              .background(MaterialTheme.colorScheme.primaryContainer)
              .clickable { expanded = true }
              .padding(AppDimensions.paddingSmallMedium)
              .testTag("practiceModeSelector"),
      contentAlignment = Alignment.Center) {
        Text(
            text = "Mode : $selectedMode",
            fontSize = AppFontSizes.subtitle, // 16.0sp
            color = MaterialTheme.colorScheme.primary,
            fontWeight = FontWeight.Bold,
...
          PracticeModeDropDownMenuCustomItem(
              sessionType = SessionType.INTERVIEW,
              onClickSet = {
                selectedMode = it
                expanded = false
              },
              testTag = "practiceModeOption1")

          PracticeModeDropDownMenuCustomItem(
              sessionType = SessionType.SPEECH,
              onClickSet = {
                selectedMode = it
                expanded = false
              },
              testTag = "practiceModeOption2")
          PracticeModeDropDownMenuCustomItem(
              sessionType = SessionType.NEGOTIATION,
              onClickSet = {
                selectedMode = it
                expanded = false
              },
              testTag = "practiceModeOption3")
        }
      }
}

/**
 * Composable function that represents a single leaderboard item, displaying the profile's rank,
...
  Box(
      modifier =
          Modifier.clip(RoundedCornerShape(AppDimensions.roundedCornerRadius))
              .background(MaterialTheme.colorScheme.primaryContainer)
              .clickable { expanded = true }
              .padding(AppDimensions.paddingSmallMedium)
              .testTag("rankMetricSelector"),
      contentAlignment = Alignment.Center) {
        Text(
            text = "Metric : $selectedMetric",
            fontSize = AppFontSizes.subtitle,
            color = MaterialTheme.colorScheme.primary,
            fontWeight = FontWeight.Bold,
...
              text = "Ratio",
              metric = "Ratio",
              onClickSet = {
                selectedMetric = "Ratio"
                expanded = false
              },
              testTag = "rankMetricOption1")
          MetricDropDownMenuCustomItem(
              text = "Success",
              metric = "Success",
              onClickSet = {
                selectedMetric = "Success"
                expanded = false
              },
              testTag = "rankMetricOption2")
          MetricDropDownMenuCustomItem(
              text = "Improvement",
              metric = "Improvement",
              onClickSet = {
                selectedMetric = "Improvement"
                expanded = false
              },
              testTag = "rankMetricOption3")
        }
      }
}

/**
 * The implementation of the toolbar containing the practice mode button and the rank metric button
 */
@Composable
fun ButtonRow() {
  Row(
      modifier =
          Modifier.testTag("buttonRowLeaderboard")
              .fillMaxWidth()
              .padding(top = AppDimensions.paddingMedium),
      horizontalArrangement =
          Arrangement.spacedBy(AppDimensions.spacingXLarge, Alignment.CenterHorizontally),
  ) {
    PracticeModeSelector()
...
