...
                Spacer(modifier = Modifier.width(AppDimensions.paddingSmall))

                Text(
                    text = "Add a friend",
                    style = MaterialTheme.typography.titleMedium,
                    color = MaterialTheme.colorScheme.onSurface,
                    modifier = Modifier.testTag("addFriendTitle"))
              }

          LazyColumn(
              modifier = Modifier.fillMaxSize().padding(horizontal = AppDimensions.paddingMedium)) {
                // Search Field
                item {
...
                        expanded = newValue.isNotEmpty()
                      },
                      modifier =
                          Modifier.fillMaxWidth()
                              .wrapContentHeight()
                              .focusRequester(focusRequester)
                              .testTag("addFriendSearchField"),
                      label = {
                        Text(
                            "Username",
                            modifier = Modifier.testTag("searchFieldLabel"),
                            color = MaterialTheme.colorScheme.onSurface)
                      },
...
                              text = "Sent Friend Requests",
                              style = MaterialTheme.typography.titleSmall,
                              modifier = Modifier.weight(1f).testTag("sentFriendRequestsHeader"),
                              color = MaterialTheme.colorScheme.onSurface)
                          IconButton(
                              onClick = { isSentRequestsExpanded = !isSentRequestsExpanded },
                              modifier = Modifier.testTag("toggleSentRequestsButton")) {
                                Icon(
                                    imageVector =
                                        if (isSentRequestsExpanded) Icons.Default.ExpandLess
                                        else Icons.Default.ExpandMore,
                                    contentDescription =
                                        if (isSentRequestsExpanded) "Collapse Sent Requests"
...
